--- a/bachproef/SchrursRubenBP.tex
+++ b/bachproef/SchrursRubenBP.tex
@@ -46,7 +46,7 @@
 }
 
 % Other packages not already included can be imported here
-
+\usepackage{listings}
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
 \author{Ruben Schrurs}
