--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ruben Schrurs at 2023-05-07 12:00:32 +0200 
+%% Created for Ruben Schrurs at 2023-05-18 11:49:05 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,13 +11,23 @@
 
 
 
+@misc{reactThreeFiber2023,
+	date-added = {2023-05-18 11:43:23 +0200},
+	date-modified = {2023-05-18 11:46:45 +0200},
+	month = {5},
+	title = {React Three Fiber Documentatie},
+	url = {https://docs.pmnd.rs/react-three-fiber},
+	year = {2023},
+	bdsk-url-1 = {https://docs.pmnd.rs/react-three-fiber}}
+
 @misc{threejs2023,
 	date-added = {2023-05-07 11:56:16 +0200},
 	date-modified = {2023-05-07 11:57:44 +0200},
 	month = {5},
 	title = {Three.js Documentatie},
 	url = {https://threejs.org/},
-	year = {2023}}
+	year = {2023},
+	bdsk-url-1 = {https://threejs.org/}}
 
 @webpage{Simon2023,
 	author = {Bruno Simon},
