--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -15,3 +15,4 @@
 %onderzoek?
 
 
+Bij de start van de tweede POC was er veel ambitie voor een volledig interactieve website te maken. Bij nader inzien bleek dit dus niet zo gemakkelijk te zijn. Alhoewel de theorie van Three.js niet uiterst moeilijk is, is de toepassing ervan echter zeer complex. Het verg
