--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -20,6 +20,34 @@ Het concept voor beide webshops is een online vinyl winkel, hierbij zal gebruik 
 
 De vergelijkende studie zal afgelegd worden m.b.v. UX metrics. Deze geven ons concrete metingen...
 
+\section{Mock-ups}
+
+Alvorens er een lijn code geschreven wordt zijn er mock-ups gemaakt voor de mobiele versie \ref{fig:mobileMockUps} en de desktop versie, beide voor de Home Pagina \ref{fig:desktopHomeMockUp} en de Detail Pagina \ref{fig:desktopDetailMockUp}. Zoals eerder vermeld dienen de mock-ups als een basis voor de conventionele versie van de webshop om een goede UX/UI te voorzien.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.3\linewidth]{graphics/HomePageMobile}
+	\includegraphics[width=0.3\linewidth]{graphics/DetailsPageMobile}
+	\caption[Mock-Ups Mobile]{Mock-Ups Mobile}
+	\label{fig:mobileMockUps}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{graphics/HomePageDesktop}
+	\caption[Mock-Up Desktop]{Mock-Up Desktop Home Pagina}
+	\label{fig:desktopHomeMockUp}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{graphics/DetailPageDesktop}
+	\caption[Mock-Up Desktop]{Mock-Up Desktop Detail Pagina}
+	\label{fig:desktopDetailMockUp}
+\end{figure}
+
+\pagebreak
+
 \section{Proof-of-concept: Conventioneel}
 
 De conventionele POC is de eerste die zal verwezenlijkt worden. Deze zal bestaan uit een React front-end en een Node.js backend om de Spotify API te hanteren. De reden voor het gebruiken van React en Node.js is omdat ze behoren tot de meest gebruikte frameworks voor het bouwen van websites.
