--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -17,10 +17,10 @@ React is een open-source front-end JavaScript bibliotheek voor het bouwen van UI
 De sterkte van React stemt af van de focus op individuele componenten. Deze componenten kunnen developers gemakkelijk hergebruiken om web applicaties te ontwikkelen. Componenten zijn losstaande en herbruikbare stukjes code. Ze vervullen dezelfde functie als JavaScript-functies maar werken geïsoleerd en geven HTML terug. Compenten komen voor in twee vormen, klasse componenten en functie componenten , de best-practice is momenteel om de functievorm te gebruiken. \autocite{W3Schools2023} Deze componenten kunnen ook genest worden, zo kunnen we componenten maken die gebruikt worden in meerdere web applicaties omdat ze los staan van de gehele applicatie.
 
 \subsection{Props}
-Componenten zijn dus een krachtige tool, maar wat als je een component nodig hebt waarbij bepaalde variabelen kunnen veranderen, zoals een afbeelding of een stuk tekst? Hier komen props in het verhaal terecht. Net zoals je bij een afbeelding de "src" meegeeft kan je bij React-componenten ook aangepaste props meegeven. Dit kan men doen door in de component-tag een waarde toe te kennen aan de prop en deze vervolgens te destructuren in de parameters van de component \autocite{NextJS2023}. Op deze manier kunnen developers op een eenvoudige manier gegevens tussen componenten doorgeven.
+Componenten zijn dus een krachtige tool, maar wat als je een component nodig hebt waarbij bepaalde variabelen kunnen veranderen, zoals een afbeelding of een stuk tekst? Hier komen props in het verhaal terecht. Net zoals je bij een afbeelding de "src" meegeeft kan je bij React-componenten ook aangepaste props meegeven. Dit kan men doen door in de component-tag een waarde toe te kennen aan de prop en deze vervolgens te destructureren in de parameters van de component \autocite{NextJS2023}. Op deze manier kunnen developers op een eenvoudige manier gegevens tussen componenten doorgeven.
 
 \subsection{Hooks}
-Het derde fundamentele concept van React zijn "hooks". Hooks bieden de mogelijkheid om extra logica toe te voegen aan je componenten, gebaseerd op een "state". Een state is een stuk informatie in je UI dat gedurende de tijd kan veranderen, meestal als gevolg van een interactie van de gebruiker \autocite{NextJS2023}. Stel dat de gebruiker bijvoorbeeld de optie heeft om op een "Toon Meer" knop te klikken. Hiervoor kan perfect de useState(false) state gebruikt worden. Als de gebruiker op de knop klikt, kunnen we de state wijzigen naar true, wat zal resulteren in het tonen van meer items.
+Het derde fundamentele concept van React zijn "hooks". Hooks bieden de mogelijkheid om extra logica toe te voegen aan je componenten, gebaseerd op een "state". Een state is een stuk informatie in de UI dat gedurende de tijd kan veranderen, meestal als gevolg van een interactie van de gebruiker \autocite{NextJS2023}. Stel dat een gebruiker bijvoorbeeld de optie heeft om op een "Toon Meer" knop te klikken. Hiervoor kan perfect de useState(false) state gebruikt worden. Als de gebruiker op de knop klikt, kunnen we de state wijzigen naar true, wat zal resulteren in het tonen van meer items.
 
 \section{Node.js}
 
@@ -50,7 +50,7 @@ Voor dit onderzoek zijn alleen hoofdstuk één, twee, drie en zeven van belang.
 
 \subsection{Basis}
 
-Hier worden de basiscomponenten van Three.js overlopen.
+In volgend hoofdstuk worden de basiscomponenten van Three.js overlopen.
 
 \subsubsection{WebGL}
 
