--- a/bachproef/SchrursRubenBP.tex
+++ b/bachproef/SchrursRubenBP.tex
@@ -52,8 +52,8 @@
 \author{Ruben Schrurs}
 \supervisor{Dhr. T. Antjon}
 \cosupervisor{Dhr. K. Dewaegenaere }
-\title[Optionele ondertitel]%
-    {De impact van 3D interactie op e-commerce: een vergelijkende studie en proof-of-concept}
+\title%
+    {Ontdekken van de voordelen en beperkingen bij de implementatie van 3D-interactie in e-commerce: Een vergelijkende studie en proof-of-concept.}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{2}
 \degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
