--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -12,7 +12,7 @@ Door de evolutie van computers en dus ook browsers in het algemeen maken web dev
 
 De implementatie van 3D elementen in web applicaties zal ongetwijfeld een toename kennen in de jaren die volgen. Het framework Three.js is een van de koplopers in dit domein en bestaat al een eind maar is pas de voorbije jaren, mede door de algemene stijging in grafische kracht van computers, in populariteit toegenomen. 
 
-Gebruikers kunnen a.d.h.v. Three.js dus met meer interactie omgaan op het web. Dit kan goede maar ook slechte gevolgen hebben, dit is waar het onderzoek een zo goed mogelijk antwoord zal proberen te formuleren. De focus van het onderzoek zal bij e-commerce liggen, hiermee kunnen developers een beter beeld krijgen of de gevolgen van het implementeren van Three.js een meerwaarde kan bieden voor hun web applicaties.
+Gebruikers kunnen a.d.h.v. Three.js dus met meer interactie omgaan op het web. Dit gegeven kan voordelen met zich meebrengen en lijkt op het eerste zicht een logisch gevolg. Wanneer developers echter Three.js willen toevoegen aan hun vaardigheden zullen ze ongetwijfeld een leerproces doorgaan. Omdat de voordelen van de implementatie van 3D-interactie nog niet volledig gekend zijn kan het vaak een moeilijke afweging zijn voor developers om de keuze te maken Three.js aan te leren. De focus van het onderzoek zal bij e-commerce liggen, hiermee kunnen developers een beter beeld krijgen of de gevolgen van het implementeren van Three.js een meerwaarde kan bieden voor hun web applicaties.
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
 \label{sec:onderzoeksvraag}
